Import of BOFTX/Games-Dukedom-v0.1.1 from CPAN.
gitpan-cpan-distribution: Games-Dukedom
gitpan-cpan-version:      v0.1.1
gitpan-cpan-path:         BOFTX/Games-Dukedom/Games-Dukedom-v0.1.1.tar.gz
gitpan-cpan-author:       BOFTX
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -18,10 +18,11 @@ no_index:
   directory:
     - t
     - inc
+    - xt
 requires:
   Moo: '0'
   MooX::ClassAttribute: '0'
   MooX::StrictConstructor: '0'
   MooX::Struct: '0'
   Throwable: '0'
-version: v0.1_1
+version: v0.1.1
