--- a/META.yml
+++ b/META.yml
@@ -20,9 +20,11 @@ no_index:
     - inc
     - xt
 requires:
-  Moo: '0'
+  Moo: '1.004003'
   MooX::ClassAttribute: '0'
   MooX::StrictConstructor: '0'
   MooX::Struct: '0'
   Throwable: '0'
-version: v0.1.1
+  Try::Tiny: '0'
+  perl: '5.006000'
+version: v0.1.2
